--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-./vs
-./github
-./BookingSystem/bin/
-./BookingSystem/obj/
+.vs/**
+.vscode/**
+/BookingSystem/bin/**
+/BookingSystem/obj/**
+.vs/BookingSystem/FileContentIndex/3feb04aa-01f3-464d-8540-c463b27300e6.vsidx
+.vs/BookingSystem/v17/.futdcache.v2
+.vs/BookingSystem/v17/.suo
