--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 .vs/BookingSystem/FileContentIndex/3feb04aa-01f3-464d-8540-c463b27300e6.vsidx
 .vs/BookingSystem/v17/.futdcache.v2
 .vs/BookingSystem/v17/.suo
+.vs/ProjectEvaluation/bookingsystem.metadata.v7.bin
+BookingSystem/obj/Debug/net7.0/BookingSystem.dll
